Colab을 통해 생성됨

--- a/0_MarkDown4README_md.ipynb
+++ b/0_MarkDown4README_md.ipynb
@@ -29,7 +29,14 @@
       "cell_type": "markdown",
       "source": [
         "# ✂️✏️📌 **How to Use <font color = 'red'> Markdown Language**\n",
-        "* ## For <font color = 'orange'> more syntax</font> of markdown langauge, [Click here.](https://www.markdownguide.org/basic-syntax/)\n"
+        "\n",
+        "#**How to Use <font color = 'red'> Markdown </font> Language**\n",
+        "\n",
+        "#[Click here.](https://www.naver.com/)\n",
+        "\n",
+        "* ## For <font color = 'orange'> more syntax</font> of markdown langauge, [Click here.](https://www.markdownguide.org/basic-syntax/)\n",
+        "\n",
+        "###**Python** language"
       ],
       "metadata": {
         "id": "nFyrb7heQOTL"
@@ -38,9 +45,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#**Text books**\n",
+        "\n",
+        "-[파이썬 200제](https://wikidocs.net/book/1)"
+      ],
+      "metadata": {
+        "id": "s7odT7qh9J-y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# NLP_2024\n",
         "\n",
-        "# 🐹🍦 **Python Language**\n",
+        "# 🍀 **Python Language**🍀\n",
         "\n",
         "## **Learning Python** using **Colab** ([Visit Colab homepage](https://colab.research.google.com/?utm_source=scs-index)) and **Github** ([Visit Github homepage](https://github.com/))\n",
         "\n",
@@ -59,7 +77,8 @@
         "### **5. Class Materials**\n",
         "| # | Sessions | Keywords |\n",
         "|:--:|:--:|:--:|\n",
-        "| 1 | Markdown Language 👪  | [syntax](https://github.com/ms624atyale/NLP_2024/blob/main/0_MarkDown4README_md.ipynb)|  "
+        "| 1 | Markdown Language 👪  | [syntax](https://github.com/ms624atyale/NLP_2024/blob/main/0_MarkDown4README_md.ipynb)|  \n",
+        "| 2 | Python Language ✨ | [Hi](https://github.com/zueeon/NLP_2024/blob/main/0_MarkDown4README_md.ipynb)"
       ],
       "metadata": {
         "id": "OtctgkT2NOCS"
