Colab을 통해 생성됨

--- a/2_FiveTypesofData.ipynb
+++ b/2_FiveTypesofData.ipynb
@@ -27,53 +27,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "a = 1\n",
-        "b = 2\n",
-        "print(a+b)"
-      ],
-      "metadata": {
-        "id": "tLn0VDvpkB-I",
-        "outputId": "7c726601-4fc3-412c-b81a-c458f7b7cf03",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = \"good\"\n",
-        "a = \"z\"\n",
-        "\n",
-        "b = \"nice\"\n",
-        "c = \"I love Sam's pencil\"\n",
-        "d = 'I love Sam's pencil'\n",
-        "\n",
-        "f = \"I love Sam's pencil\"\n",
-        "\n",
-        "g = ['a', 'abc', 1, '911', 'I love Python']\n",
-        "\n",
-        "f = ('a', 'abc', 1, '911', 'I love Python')"
-      ],
-      "metadata": {
-        "id": "XEGTeWd-osI3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "#🐹 🐾  Five Types of Data\n",
@@ -171,30 +124,6 @@
     {
       "cell_type": "code",
       "source": [
-        "a = 1\n",
-        "print (a)"
-      ],
-      "metadata": {
-        "id": "Onsd_VkFui1u",
-        "outputId": "3a0f3ab4-de1b-42e5-ea68-d9101fb526f3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown 📌 Assign 2 to variable b.\n",
         "b = 2\n",
         "print (b)"
@@ -220,30 +149,6 @@
     {
       "cell_type": "code",
       "source": [
-        "b = 2\n",
-        "print(b)"
-      ],
-      "metadata": {
-        "id": "jJG9tVH_vD1F",
-        "outputId": "d08e7474-4d22-4ee7-ee31-1d8e78c77a81",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown 📌 Use a print function and a Boolean operator +\n",
         "print(a + b)"
       ],
@@ -255,29 +160,6 @@
         }
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(a + b)"
-      ],
-      "metadata": {
-        "id": "DFc3O6z_vHQF",
-        "outputId": "87b6eb9e-2301-49ef-f781-0751f1d8f91b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,98 +209,16 @@
     {
       "cell_type": "code",
       "source": [
-        "c = \"I love Python\"\n",
-        "print (c)"
-      ],
-      "metadata": {
-        "id": "yNbpXLFWvNoF",
-        "outputId": "b72a08f2-4ea8-44f9-d19c-b7b7a9618cd9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I love Python\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown 📌 To assign valid variable names\n",
         "a = 'Lori'\n",
         "_b = 'Sam'\n",
         "a_b = 'Ken'\n",
         "c_d = 'Jen'\n",
         "\n",
-        "\n",
-        "print(a)\n",
-        "print(_b)\n",
-        "print(a_b)\n",
-        "print(c_d)\n",
-        "\n",
-        "\n",
-        "a = 'Emma'\n",
-        "#a = 'Emma' # Be aware that variable a is used two times!"
+        "a = 'Emma' # Be aware that variable a is used two times!"
       ],
       "metadata": {
-        "id": "FqAo7mMFEfjd",
-        "outputId": "b0e911c3-07ce-41b1-bfee-6742bde9ff89",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Lori\n",
-            "Sam\n",
-            "Ken\n",
-            "Jen\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(a)"
-      ],
-      "metadata": {
-        "id": "TodzyDZ7xH59",
-        "outputId": "c9553c2b-9eee-42d0-dc61-742608e1fd66",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Emma\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a1 = 'Jen'\n",
-        "a2 = 'Lori'"
-      ],
-      "metadata": {
-        "id": "iUXkCRadv7td"
+        "id": "FqAo7mMFEfjd"
       },
       "execution_count": null,
       "outputs": []
@@ -505,37 +305,6 @@
     {
       "cell_type": "code",
       "source": [
-        "d = (\"Mercury\", \"Venus\", \"Earth\", \"Mars\", \"Jupiter\", \"Saturn\", \"Uranus\", \"Neptune\") #Names of planets\n",
-        "e = (\"수성\", \"금성\", \"지구\", \"화성\", \"목성\", \"토성\", \"천황성\", \"혜왕성\" ) #행성 이름\n",
-        "f = (1,2,3,4,5,6,7,8)\n",
-        "\n",
-        "print (d)\n",
-        "print(e)\n",
-        "print (f)"
-      ],
-      "metadata": {
-        "id": "U270FumMyMWs",
-        "outputId": "dbb76a77-1be5-4607-98fa-18f136b24a7d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "('Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune')\n",
-            "('수성', '금성', '지구', '화성', '목성', '토성', '천황성', '혜왕성')\n",
-            "(1, 2, 3, 4, 5, 6, 7, 8)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown 📌 Assign lists to variables such as d, e, f.\n",
         "\n",
         "d = [\"Mercury\", \"Venus\", \"Earth\", \"Mars\", \"Jupiter\", \"Saturn\", \"Uranus\", \"Neptune\"] #Names of planets\n",
@@ -548,12 +317,12 @@
       ],
       "metadata": {
         "id": "z4DHh7t_OCBS",
-        "outputId": "076423d2-04e8-4374-fc2d-3a4f433344cb",
+        "outputId": "fca3fb66-edf9-4c42-9d9e-2625f0071acc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,6 +393,17 @@
     {
       "cell_type": "code",
       "source": [
+        "k= {'Mercury':'수성', 'Venus':'금성', 'Earth':'지구', 'Mars':'화성', 'Jupiter':'목성', 'Saturn':'토성', 'Uranus':'명왕성'}"
+      ],
+      "metadata": {
+        "id": "7gfwzLWp4t6i"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 Assign dictionary data to variables such as k and m.\n",
         "\n",
         "k = {'Mercury':'수성', 'Venus':'금성', 'Earth':'지구', 'Mars':'화성', 'Jupiter':'목성', 'Saturn':'토성', 'Uranus':'명왕성', 'Neptune':'해왕성'} #key in English: value in Korean\n",
@@ -655,6 +435,32 @@
     {
       "cell_type": "code",
       "source": [
+        "dict = {'a':1, 'b':2, 'c':3}\n",
+        "print(dict)\n",
+        "print(dict['a'])"
+      ],
+      "metadata": {
+        "id": "EXe2GWp45I3W",
+        "outputId": "541a54b0-2a56-46a8-8108-9faffe27dc41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3}\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 Print the value of key 'a' ('a' as string data)\n",
         "dict = {'a':1, 'b':2, 'c':3}\n",
         "print (dict)\n",
@@ -675,6 +481,35 @@
           "text": [
             "{'a': 1, 'b': 2, 'c': 3}\n",
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict = {'a':1, 'b':2, 'c':3}\n",
+        "print(dict)\n",
+        "\n",
+        "dict['a']=7\n",
+        "\n",
+        "print(dict)"
+      ],
+      "metadata": {
+        "id": "Hia1bLr96H-y",
+        "outputId": "640ca131-c8c3-473b-e872-be4d168bfda7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3}\n",
+            "{'a': 7, 'b': 2, 'c': 3}\n"
           ]
         }
       ]
