Colab을 통해 생성됨

--- a/3_Indexing_Slicing.ipynb
+++ b/3_Indexing_Slicing.ipynb
@@ -87,7 +87,7 @@
         "\n",
         "- [::2] Every other element from the first element (e.g., 'Ilv yho')\n",
         "\n",
-        "| str data | I | l | v |  | y | h | o |\n",
+        "| str data | I | l | v |  | y | h | n |\n",
         "|:---------|:--|:--|:--|:--|:--|:--|:-:|\n",
         "| Forward Indexing | 0 | 2 | 4 | 6 | 8 | 10| 12|\n",
         "\n",
@@ -102,74 +102,27 @@
     {
       "cell_type": "code",
       "source": [
-        "str_data = 'I love python'\n",
-        "print(str_data[0])\n",
-        "print(str_data[1])\n",
-        "print(str_data[2])\n",
-        "print(str_data[3])\n",
-        "print(str_data[4])\n",
-        "print(str_data[5])\n",
-        "print(str_data[6])\n",
+        "str_data = \"Sooho is the new representative of the freshmen year in the DAEC.\"\n",
+        "\n",
         "print(str_data[7])\n",
-        "print(str_data[8])\n",
-        "print(str_data[9])\n",
-        "print(str_data[10])\n",
-        "print(str_data[11])\n",
-        "print(str_data[12])"
-      ],
-      "metadata": {
-        "id": "KOshGGDaAYOG",
-        "outputId": "344cbc63-9dd6-4cc1-9675-6432f4e6c812",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I\n",
-            " \n",
-            "l\n",
-            "o\n",
-            "v\n",
-            "e\n",
-            " \n",
-            "p\n",
-            "y\n",
-            "t\n",
-            "h\n",
-            "o\n",
-            "n\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "str_data = 'I love python'\n",
+        "\n",
+        "print(str_data[3])\n",
+        "\n",
+        "print(str_data[:])\n",
+        "\n",
         "print(str_data[-1])\n",
-        "print(str_data[-2])\n",
-        "print(str_data[-3])\n",
-        "print(str_data[-4])\n",
-        "print(str_data[-5])\n",
-        "print(str_data[-6])\n",
-        "print(str_data[-7])\n",
-        "print(str_data[-8])\n",
-        "print(str_data[-9])\n",
-        "print(str_data[-10])\n",
-        "print(str_data[-11])\n",
-        "print(str_data[-12])\n",
-        "print(str_data[-13])\n"
+        "\n",
+        "print(str_data[-23])\n",
+        "\n",
+        "str_data[-23]\n",
+        "\n"
       ],
       "metadata": {
-        "id": "OAjGexF4BoOE",
-        "outputId": "1e23329b-3891-4417-d5e0-56335686d289",
+        "id": "P3KvuTlDmwoi",
+        "outputId": "5d6d5842-053e-41f3-fd73-ada64460dbcd",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 122
         }
       },
       "execution_count": 7,
@@ -178,57 +131,26 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "n\n",
-            "o\n",
+            "s\n",
             "h\n",
-            "t\n",
-            "y\n",
-            "p\n",
-            " \n",
-            "e\n",
-            "v\n",
-            "o\n",
-            "l\n",
-            " \n",
-            "I\n"
+            "Sooho is the new representative of the freshmen year in the DAEC.\n",
+            ".\n",
+            "s\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
         },
-        "id": "0mZYBcGxZz0O",
-        "outputId": "f33f252d-45b9-4908-ad61-f710cb917d31"
-      },
-      "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I love python\n",
-            "['apple', 'banana', 'grapes', 'mango']\n",
-            "('apple', 'banana', 'grapes', 'mango')\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'s'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
         }
-      ],
-      "source": [
-        "#@markdown 🚗 🚙 Sequence data (str, list, tuple)\n",
-        "\n",
-        "#@markdown ##Exercise\n",
-        "\n",
-        "\n",
-        "str_data = 'I love python'\n",
-        "list_data = ['apple', 'banana', 'grapes', 'mango']\n",
-        "tuple_data = ('apple', 'banana', 'grapes', 'mango')\n",
-        "\n",
-        "print (str_data)\n",
-        "print (list_data)\n",
-        "print(tuple_data)"
       ]
     },
     {
@@ -366,30 +288,81 @@
     {
       "cell_type": "code",
       "source": [
-        "listdata = ['a', 'b', [1,2,3]]\n",
-        "print(listdata[0])\n",
-        "print(listdata[-1])\n",
-        "print(listdata[2][-1])\n",
-        "print(listdata[2][2])"
+        "mix_data = [1, 2,['a', 'b', 'c']]\n",
+        "print(mix_data[:])\n",
+        "\n",
+        "mix_data[0] = 'brunch'\n",
+        "print(mix_data[:])\n",
+        "print(mix_data[1:])"
       ],
       "metadata": {
-        "id": "3dmA4lZtCHCQ",
-        "outputId": "336fb9e0-2d75-4cd1-e82d-0ea5018ce153",
+        "id": "0KYPcdtKrQcX",
+        "outputId": "9cdf7fa6-57bd-40d2-8e95-8346cc548faa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a\n",
+            "[1, 2, ['a', 'b', 'c']]\n",
+            "['brunch', 2, ['a', 'b', 'c']]\n",
+            "[2, ['a', 'b', 'c']]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1 2 [ ] a b c"
+      ],
+      "metadata": {
+        "id": "fN5ZBwLerDoA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listdata = [1, 2, [1,2,3]]\n",
+        "print(listdata[0])\n",
+        "print(listdata[-1])\n",
+        "\n",
+        "print(listdata[2])\n",
+        "print(listdata[2][-1])\n",
+        "listdata[2][-1]"
+      ],
+      "metadata": {
+        "id": "PoTJyTAjptDh",
+        "outputId": "f57898b1-31a7-4194-9978-13882e34fcbb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
             "[1, 2, 3]\n",
-            "3\n",
+            "[1, 2, 3]\n",
             "3\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
@@ -425,28 +398,80 @@
       "cell_type": "code",
       "source": [
         "list_data = ['apple', 'banana', 'grapes', 'mango']\n",
+        "tuple_data = ('apple', 'banana', 'grapes', 'mango')\n",
+        "\n",
+        "print(list_data)\n",
+        "print(tuple_data)\n",
+        "\n",
+        "list_data[-1] = 'blueberry'\n",
         "print(list_data)\n",
         "\n",
-        "list_data[-4] = 'shine musket'\n",
-        "print(list_data)\n"
+        "tuple_data[-1] = 'blueberry' #error\n",
+        "print(tuple_data)"
       ],
       "metadata": {
-        "id": "Okm0zrzmD0LJ",
-        "outputId": "360dae31-f071-4038-d58a-fcba6e0824d5",
+        "id": "A7sL1_PXtJha",
+        "outputId": "8e7bf968-02cc-4d2d-98eb-4cc5ee96349c",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 245
         }
       },
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['apple', 'banana', 'grapes', 'mango']\n",
-            "['shine musket', 'banana', 'grapes', 'mango']\n"
+            "('apple', 'banana', 'grapes', 'mango')\n",
+            "['apple', 'banana', 'grapes', 'blueberry']\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'tuple' object does not support item assignment",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-1f53290ec7f5>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mtuple_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'blueberry'\u001b[0m \u001b[0;31m#error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuple_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0mZYBcGxZz0O",
+        "outputId": "f33f252d-45b9-4908-ad61-f710cb917d31"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I love python\n",
+            "['apple', 'banana', 'grapes', 'mango']\n",
+            "('apple', 'banana', 'grapes', 'mango')\n"
+          ]
+        }
+      ],
+      "source": [
+        "#@markdown 🚗 🚙 Sequence data (str, list, tuple)\n",
+        "\n",
+        "#@markdown ##Exercise\n",
+        "\n",
+        "list_data = ['apple', 'banana', 'grapes', 'mango']\n",
+        "tuple_data = ('apple', 'banana', 'grapes', 'mango')\n",
+        "\n",
+        "print (list_data)\n",
+        "print(tuple_data)"
       ]
     },
     {
@@ -454,7 +479,7 @@
       "source": [
         "#@markdown 📌 Apply indices to List data\n",
         "\n",
-        "#@markdown ## Replacment by means of using incices\n",
+        "#@markdown ## Replacment by means of using indices\n",
         "\n",
         "list_data = ['apple', 'banana', 'grapes', 'mango']\n",
         "list_data[0]=\"shine musket\"\n",
@@ -517,6 +542,41 @@
     {
       "cell_type": "code",
       "source": [
+        "list_data = 'abcdefghijklmnopqrstuvwxyz'\n",
+        "print(len(list_data))\n",
+        "\n",
+        "print(list_data[:])\n",
+        "print(list_data[:1])\n",
+        "print(list_data[::2])\n",
+        "print(list_data[::3])\n",
+        "print(list_data[1:25])\n"
+      ],
+      "metadata": {
+        "id": "WDRCIXoevE6m",
+        "outputId": "d4d10173-41a1-439c-9461-39c4a60796da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "26\n",
+            "abcdefghijklmnopqrstuvwxyz\n",
+            "a\n",
+            "acegikmoqsuwy\n",
+            "adgjmpsvy\n",
+            "bcdefghijklmnopqrstuvwxy\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown Slice sequence data\n",
         "\n",
         "str_data = 'Time is money!!'\n",
@@ -564,6 +624,32 @@
       "metadata": {
         "id": "M_oQWafaH5Sf"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str_data1 = 'I love'; str_data2 = 'Python'; str_data3 = ' '\n",
+        "print(str_data1 + str_data3 + str_data2)\n",
+        "print(str_data2)"
+      ],
+      "metadata": {
+        "id": "vkFm648OzIbr",
+        "outputId": "b958006d-cee0-469b-9959-7c46a0d4c561",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I love Python\n",
+            "Python\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
