Colab을 통해 생성됨

--- a/3_Indexing_Slicing.ipynb
+++ b/3_Indexing_Slicing.ipynb
@@ -102,60 +102,6 @@
     {
       "cell_type": "code",
       "source": [
-        "str_data = \"Sooho is the new representative of the freshmen year in the DAEC.\"\n",
-        "\n",
-        "print(str_data[7])\n",
-        "\n",
-        "print(str_data[3])\n",
-        "\n",
-        "print(str_data[:])\n",
-        "\n",
-        "print(str_data[-1])\n",
-        "\n",
-        "print(str_data[-23])\n",
-        "\n",
-        "str_data[-23]\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "P3KvuTlDmwoi",
-        "outputId": "5d6d5842-053e-41f3-fd73-ada64460dbcd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        }
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "s\n",
-            "h\n",
-            "Sooho is the new representative of the freshmen year in the DAEC.\n",
-            ".\n",
-            "s\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'s'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown 📌 Apply indices to string data\n",
         "\n",
         "#@markdown Forward Indexing\n",
@@ -288,87 +234,6 @@
     {
       "cell_type": "code",
       "source": [
-        "mix_data = [1, 2,['a', 'b', 'c']]\n",
-        "print(mix_data[:])\n",
-        "\n",
-        "mix_data[0] = 'brunch'\n",
-        "print(mix_data[:])\n",
-        "print(mix_data[1:])"
-      ],
-      "metadata": {
-        "id": "0KYPcdtKrQcX",
-        "outputId": "9cdf7fa6-57bd-40d2-8e95-8346cc548faa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 2, ['a', 'b', 'c']]\n",
-            "['brunch', 2, ['a', 'b', 'c']]\n",
-            "[2, ['a', 'b', 'c']]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1 2 [ ] a b c"
-      ],
-      "metadata": {
-        "id": "fN5ZBwLerDoA"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "listdata = [1, 2, [1,2,3]]\n",
-        "print(listdata[0])\n",
-        "print(listdata[-1])\n",
-        "\n",
-        "print(listdata[2])\n",
-        "print(listdata[2][-1])\n",
-        "listdata[2][-1]"
-      ],
-      "metadata": {
-        "id": "PoTJyTAjptDh",
-        "outputId": "f57898b1-31a7-4194-9978-13882e34fcbb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "[1, 2, 3]\n",
-            "[1, 2, 3]\n",
-            "3\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "listdata = [1, 2, [1,2,3]]\n",
         "print(listdata[0])\n",
         "print(listdata[-1])\n",
@@ -390,53 +255,6 @@
             "1\n",
             "[1, 2, 3]\n",
             "3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_data = ['apple', 'banana', 'grapes', 'mango']\n",
-        "tuple_data = ('apple', 'banana', 'grapes', 'mango')\n",
-        "\n",
-        "print(list_data)\n",
-        "print(tuple_data)\n",
-        "\n",
-        "list_data[-1] = 'blueberry'\n",
-        "print(list_data)\n",
-        "\n",
-        "tuple_data[-1] = 'blueberry' #error\n",
-        "print(tuple_data)"
-      ],
-      "metadata": {
-        "id": "A7sL1_PXtJha",
-        "outputId": "8e7bf968-02cc-4d2d-98eb-4cc5ee96349c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
-        }
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['apple', 'banana', 'grapes', 'mango']\n",
-            "('apple', 'banana', 'grapes', 'mango')\n",
-            "['apple', 'banana', 'grapes', 'blueberry']\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'tuple' object does not support item assignment",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-1f53290ec7f5>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mtuple_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'blueberry'\u001b[0m \u001b[0;31m#error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuple_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
           ]
         }
       ]
@@ -542,41 +360,6 @@
     {
       "cell_type": "code",
       "source": [
-        "list_data = 'abcdefghijklmnopqrstuvwxyz'\n",
-        "print(len(list_data))\n",
-        "\n",
-        "print(list_data[:])\n",
-        "print(list_data[:1])\n",
-        "print(list_data[::2])\n",
-        "print(list_data[::3])\n",
-        "print(list_data[1:25])\n"
-      ],
-      "metadata": {
-        "id": "WDRCIXoevE6m",
-        "outputId": "d4d10173-41a1-439c-9461-39c4a60796da",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "26\n",
-            "abcdefghijklmnopqrstuvwxyz\n",
-            "a\n",
-            "acegikmoqsuwy\n",
-            "adgjmpsvy\n",
-            "bcdefghijklmnopqrstuvwxy\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@markdown Slice sequence data\n",
         "\n",
         "str_data = 'Time is money!!'\n",
@@ -624,32 +407,6 @@
       "metadata": {
         "id": "M_oQWafaH5Sf"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "str_data1 = 'I love'; str_data2 = 'Python'; str_data3 = ' '\n",
-        "print(str_data1 + str_data3 + str_data2)\n",
-        "print(str_data2)"
-      ],
-      "metadata": {
-        "id": "vkFm648OzIbr",
-        "outputId": "b958006d-cee0-469b-9959-7c46a0d4c561",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I love Python\n",
-            "Python\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -734,6 +491,31 @@
     {
       "cell_type": "code",
       "source": [
+        "subject = 'BTS'; verb = 'sing'; object = 'butter'; space = ' '\n",
+        "sentence = subject + space + verb + space + (object + space) *5\n",
+        "print(sentence)"
+      ],
+      "metadata": {
+        "id": "DjufUT0z5uV9",
+        "outputId": "5da082b9-a9bc-40b6-af27-35783eeef279",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BTS sing butter butter butter butter butter \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "subject = 'BTS'; verb= 'sings'; object = 'butter'\n",
         "sentence = subject + verb + object * 5\n",
         "print (sentence)\n"
@@ -769,6 +551,47 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str_data = 'bakery'\n",
+        "str_data2 = 'festivel'\n",
+        "space = ' '\n",
+        "\n",
+        "event = str_data + space + str_data2\n",
+        "\n",
+        "print(event)\n",
+        "\n",
+        "len(event)"
+      ],
+      "metadata": {
+        "id": "TbjenTuy7bv9",
+        "outputId": "6dd3a776-301e-48cf-c4db-1b8067e94961",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "bakery festivel\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
